--- a/example/index.html
+++ b/example/index.html
@@ -5,8 +5,6 @@
   </head>
   <body>
     <h1>Data Cortex Browser SDK Tester</h1>
-    <div id="results">
-
-    </div>
+    <div id="results"></div>
   </body>
 </html>
